# tract

./: Cargo.toml  runme-dumb.sh  runme.sh
ci/tract-ci-minion/: Cargo.toml
cli/: Cargo.toml
cli/src/: params.rs
core/: Cargo.toml
core/src/: broadcast.rs  hash.rs  lib.rs  plan.rs
core/src/model/: fact.rs  graph.rs  order.rs  patch.rs  typed.rs
core/src/ops/: identity.rs  konst.rs  macros.rs  matmul.rs  mod.rs  source.rs
core/src/ops/array/: mod.rs  pad.rs
core/src/ops/cnn/: mod.rs  padding.rs  patch_axis.rs  patches.rs
core/src/ops/cnn/conv/: im2col.rs  mod.rs  proptest.rs  unary.rs
core/src/ops/matmul/: lir_unary.rs  mir.rs  mir_unary.rs  pack.rs
core/src/ops/nn/: mod.rs
core/src/optim/: mod.rs
core/tests/: monterey.rs
data/: Cargo.toml
data/src/: datum.rs  lib.rs  macros.rs  tensor.rs
examples/jupyter-keras-tract-tf1/: Cargo.toml
examples/jupyter-keras-tract-tf2/: Cargo.toml
examples/nnef-dump-mobilenet-v2/: Cargo.toml
examples/nnef-mobilenet-v2/: Cargo.toml
examples/onnx-mobilenet-v2/: Cargo.toml
examples/pytorch-albert-v2/: Cargo.toml
examples/pytorch-resnet/: Cargo.toml
examples/tensorflow-mobilenet-v2/: Cargo.toml
ffi/: Cargo.toml
ffi/py/tests/: mobilenet_onnx_test.py
ffi/py/tract/: __init__.py  runnable.py
ffi/src/: lib.rs
harness/core-proptest-pulse/: Cargo.toml
harness/lstm-proptest-onnx-vs-tf/: Cargo.toml
harness/nnef-inceptionv3/: Cargo.toml
harness/onnx-proptest/: Cargo.toml
harness/onnx-test-suite/: Cargo.toml
harness/onnx-test-suite/debug-utils/: Cargo.toml
harness/tf-inceptionv3/: Cargo.toml
harness/tf-mobilenet-v2/: Cargo.toml
harness/tf-moz-deepspeech/: Cargo.toml
hir/: Cargo.toml
kaldi/: Cargo.toml
libcli/: Cargo.toml
linalg/: Cargo.toml  build.rs
linalg/cost_model/: Cargo.toml
linalg/matmul-bench/: Cargo.toml
linalg/src/: arm64.rs
linalg/src/frame/: pack.rs
linalg/src/frame/mmm/: mmm.rs
nnef/: Cargo.toml
nnef/nnef-resources/: Cargo.toml
onnx/: Cargo.toml
onnx-opl/: Cargo.toml
pulse/: Cargo.toml
pulse-opl/: Cargo.toml
tensorflow/: Cargo.toml
tflite/: Cargo.toml
