[workspace]
members = [
    "data",
]

[workspace.dependencies]
anyhow = "1.0.43"
bit-set= "0.5.2"
derive-new = "0.5.9"
downcast-rs = "1.2.0"
dyn-clone = "1.0.4"
educe = "0.4.18"
env_logger = "0.9.0"
half = { version="2", features = [ "std", "num-traits" ] }
itertools = "0.10.1"
maplit = "1.0.2"
ndarray = "0.15.3"
num-integer = "0.1.44"
num-traits = "0.2.14"
smallvec = "1.6.1"
scan_fmt = "0.2.6"
string-interner = "0.14"

[profile.opt-no-lto]
inherits="release"
lto=false
debug = true

[profile.release]
lto = true

[profile.bench]
debug = true

[profile.dev.package."*"]
opt-level = 2

# [profile.dev.package.darling_macro]
# opt-level = 0 # work around never ending build on wondows

[profile.dev.build-override]
debug = false
# strip = "debuginfo" does not work on android and ios
incremental = false
