[workspace]
members = [
    "data",
]

[workspace.dependencies]
dyn-clone = "1.0.4"
ndarray = { version = "0.15.6", default-features=false }

[profile.opt-no-lto]
inherits="release"
lto=false
debug = true

[profile.release]
lto = true

[profile.bench]
debug = true

[profile.dev.package."*"]
opt-level = 2

# [profile.dev.package.darling_macro]
# opt-level = 0 # work around never ending build on wondows

[profile.dev.build-override]
debug = false
# strip = "debuginfo" does not work on android and ios
incremental = false
