[package]
name = "tract-data"
version = "0.19.3-pre"
license = "MIT/Apache-2.0"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]
description = "Tiny, no-nonsense, self contained, TensorFlow and ONNX inference"
repository = "https://github.com/snipsco/tract"
keywords = [ "TensorFlow", "NeuralNetworks" ]
categories = [ "science" ]
autobenches = false
edition = "2021"
rust-version = "1.65"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow.workspace = true
ndarray.workspace = true

[dev-dependencies]

[[bench]]
name = "tensor_from_datum"
harness = false

[[bench]]
name = "stack_tensors"
harness = false
